--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     -o-background-size: cover;
     background-size: cover;
     margin: 0 auto;
+    font-family: 'Roboto', sans-serif;
 }
 
 header{
@@ -19,7 +20,7 @@ header h1{
     font-size: 40px;
     color: white;
     font-family: 'Concert One', cursive;
-    text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+    text-shadow: -1px 0 0 #000, 1px 0 0 #000, 0 1px 0 #000, 0 -1px 0 #000, 0px 0px #000, 0px 0px 0 #000, 0px 0px 0 #000, 0px 0px 0 #000;
 }
 
 header .logoMPG{
@@ -32,21 +33,26 @@ header img{
     width: 200px;
 }
 
-header nav ul{
+nav{
+    width: 640px;
+    margin: auto;
+}
+
+nav ul{
     display: flex;
 }
 
-header nav ul li{
+nav ul li{
     list-style: none;
     padding: 10px 0px;
     color: white;
     font-family: 'Concert One', cursive;
-    text-shadow: 1px 0 0 #000, -1px 0 0 #000, 0 1px 0 #000, 0 -1px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+    text-shadow: -1px 0 0 #000, 1px 0 0 #000, 0 1px 0 #000, 0 -1px 0 #000, 0px 0px #000, 0px 0px 0 #000, 0px 0px 0 #000, 0px 0px 0 #000;
     font-size: 20px;
     width: 150px;
 }
 
-header nav ul li:hover{
+nav ul li:hover{
     cursor: pointer;
 }
 
@@ -69,6 +75,7 @@ header nav ul li:hover{
     text-align: center;
     padding: 5px;
     margin-left: 50px;
+    font-weight: bold;
 }
 
 .show p{
@@ -98,6 +105,7 @@ header nav ul li:hover{
     width: 240px;
     border-radius: 120px;
     border: solid #4cd137 2px;
+    height: 240px;
 }
 
 .players p{
@@ -112,6 +120,7 @@ header nav ul li:hover{
     color: white;
     font-weight: bold;
     font-size: 14px;
+    cursor: pointer;
 }
 
 /* Les Equipes */
@@ -124,6 +133,8 @@ header nav ul li:hover{
 .showName{
     text-align: center;
     color : white;
+    font-weight: bold;
+    text-shadow: -1px 0 0 #000, 1px 0 0 #000, 0 1px 0 #000, 0 -1px 0 #000, 0px 0px #000, 0px 0px 0 #000, 0px 0px 0 #000, 0px 0px 0 #000;
 }
 
 .showEquipes table{
