--- a/style.css
+++ b/style.css
@@ -24,7 +24,9 @@ header h1{
 }
 
 header .logoMPG{
-    margin: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 32%;
     margin-top: -20px;
 }
@@ -121,6 +123,7 @@ nav ul li:hover{
     font-weight: bold;
     font-size: 14px;
     cursor: pointer;
+    border-color: #3498db;
 }
 
 /* Les Equipes */
