--- a/style.css
+++ b/style.css
@@ -112,17 +112,24 @@ nav ul li:hover{
 }
 
 .players img{
-    width: 240px;
+    width: 130px;
     border-radius: 120px;
-    height: 240px;
+    margin: 0 auto;
+    display: block;
+}
+
+.players p:nth-of-type(1){
+    font-size: 21px;
 }
 
 .players p{
     text-align: center;
+    font-size: 16px;
 }
 
 .players button{
     margin-left: 74px;
+    margin-top: 10px;
     padding: 7px 22px;
     border-radius: 5px;
     background-color: #3498db;
